# NLP-2026

./: LICENSE  README.md  pyproject.toml
lab01/: README.md
lab02/: lab02_Tokenization.ipynb
lab03/: Lab03-Feature-Vectors-Solution.ipynb  Lab03-Feature-Vectors.ipynb  Lab03-Word-Embeddings-Solution.ipynb  Lab03-Word-Embeddings.ipynb
lab04/: lab04-topic-modelling-LSA-1.ipynb  lab04-topic-modelling-LSA-2.ipynb  lab04_1a_RNN.ipynb  lab04_1b_LSTM.ipynb  lab04_2_CNN.ipynb  lab04_topic_modelling_LDA.ipynb
