[project]
name = "nlp-2026"
version = "0.1.0"
description = "This is a repository of labs for the NLP module of the MSc in AI at University of Surrey."
authors = [
    {name = "jackiemalooly",email = "jackie.malooly@renaissance.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
